[tool.poetry]
name = "coursework3"
version = "0.1.0"
description = ""
authors = ["Aleksander <sanya.slepow2015@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.11.2"
black = "^24.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool_black]
line-length = 125
exclude = """
(
  /(
    | .git          # в корне проекта
    | .hg
    | .mypy_cache
    | .tox
    | .venv
    | dist
  )/
  | foo.py           # Также отдельно исключить файл с именем foo.py
                     # в корне проекта
)
"""

[tool_isort]
line-length = 125

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'